--- a/Zookeeper/Show me an animal/task-info.yaml
+++ b/Zookeeper/Show me an animal/task-info.yaml
@@ -75,5 +75,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/17789#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 24 Mar 2022 09:18:04 UTC
 record: -1
