--- a/Zookeeper/What's inside/task-info.yaml
+++ b/Zookeeper/What's inside/task-info.yaml
@@ -176,5 +176,8 @@ files:
     \    }\n}"
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/17790#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 24 Mar 2022 09:28:52 UTC
 record: -1
