--- a/Zookeeper/Sustainable care  3/task-info.yaml
+++ b/Zookeeper/Sustainable care  3/task-info.yaml
@@ -186,5 +186,9 @@ files:
     \       return CheckResult.correct();\n    }\n}"
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/17791#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Thu, 24 Mar 2022 09:36:10 UTC
 record: -1
